--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whop Warden Challenge</title>
+    <title>pt 2</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         .loading {
@@ -30,7 +30,7 @@
         </form>
         
         <div id="response" class="response-box">
-            I am the Whop Warden. How may I assist you today?
+            goodluck.
         </div>
         
         <form onsubmit="return checkPassword(event)">
