--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Gatekeeper</h1>
         
         <form onsubmit="return sendPrompt(event)">
-            <input type="text" id="prompt" placeholder="Ask the Warden...">
+            <input type="text" id="prompt" placeholder="Ask the Gatekeeper...">
             <button type="submit" id="sendButton">Send</button>
         </form>
         
