--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="logo">
             <span style="font-size: 50px;">⚔️</span>
         </div>
-        <h1>Gatekeeper</h1>
+        <h1>Gatekeeper 2</h1>
         
         <form onsubmit="return sendPrompt(event)">
             <input type="text" id="prompt" placeholder="Ask the Gatekeeper...">
